600-k8s-forwarder-manifests/namnd-code-server-forwarder.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: namnd-code-server-forwarder
subsets:
  - addresses:
      - ip: 192.168.56.40
    ports:
      - port: 8040
        protocol: TCP
---
# https://github.com/kubernetes/ingress-nginx/issues/8941
apiVersion: v1
kind: Service
metadata:
  name: namnd-code-server-forwarder
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8040
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: namnd-code-server-forwarder
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: "namnd.tuana9a.com"
    external-dns.alpha.kubernetes.io/target: "xenomorph.tuana9a.com"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "namnd.tuana9a.com"
      secretName: namnd-tuana9a-com-tls
  rules:
    - host: "namnd.tuana9a.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: namnd-code-server-forwarder
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-namnd-code-server-forwarder
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: "*.namnd.tuana9a.com"
    external-dns.alpha.kubernetes.io/target: "xenomorph.tuana9a.com"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.namnd.tuana9a.com"
      secretName: wildcard-namnd-tuana9a-com-tls
  rules:
    - host: "*.namnd.tuana9a.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: namnd-code-server-forwarder
                port:
                  number: 80
