600-k8s-forwarder-manifests/trithuctre-forwarder.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: trithuctre-forwarder
subsets:
  - addresses:
      - ip: 192.168.56.1
    ports:
      - port: 8080
        protocol: TCP
---
# https://github.com/kubernetes/ingress-nginx/issues/8941
apiVersion: v1
kind: Service
metadata:
  name: trithuctre-forwarder
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trithuctre-forwarder
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "trithuctre.com"
      secretName: trithuctre-com-tls
  rules:
    - host: "trithuctre.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: trithuctre-forwarder
                port:
                  number: 80
