600-k8s-forwarder-manifests/tuana9a-dev-code-server-forwarder.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: tuana9a-dev-code-server-forwarder
subsets:
  - addresses:
      - ip: 192.168.56.9
    ports:
      - port: 8009
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tuana9a-dev-code-server-forwarder
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8009
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tuana9a-dev-code-server-forwarder
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    external-dns.alpha.kubernetes.io/hostname: "dev.tuana9a.com"
    external-dns.alpha.kubernetes.io/target: "zione.tuana9a.com"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "dev.tuana9a.com"
      secretName: dev-tuana9a-com-tls
  rules:
    - host: "dev.tuana9a.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tuana9a-dev-code-server-forwarder
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-tuana9a-dev-code-server-forwarder
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    external-dns.alpha.kubernetes.io/hostname: "*.dev.tuana9a.com"
    external-dns.alpha.kubernetes.io/target: "zione.tuana9a.com"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.dev.tuana9a.com"
      secretName: wildcard-dev-tuana9a-com-tls
  rules:
    - host: "*.dev.tuana9a.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tuana9a-dev-code-server-forwarder
                port:
                  number: 80
